<resources>
    <string name="app_name">BhakaMusic</string>
    <string name="create_your_experience">Create your experience</string>
    <string name="stream_your_favourite_song_non_the_go">Stream your favourite song\nON THE GO</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="token">token</string>
    <string name="terms_and_conditions_privacy_policy">Terms and Conditions | Privacy Policy</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Music</string>
    <string name="title_dashboard">Favourite</string>
    <string name="title_notifications">Account</string>
    <string name="music">Music</string>
    <string name="song_name">Song Name</string>
    <string name="current_playing_song_name">No Song playing currently</string>
    <string name="artistname">ArtistName</string>
    <string name="position">0:00</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_title_name">Song Title Name</string>
    <string name="ablum_name">Ablum Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="library">Library</string>
    <string name="playlist">Playlist</string>
    <string name="recently_streamed">Recently Streamed</string>
    <string name="main_activity">MAIN_ACTIVITY</string>
    <string name="userID">4d516d8b–864c–47e8–99cb-934433925298</string>
    <string name="username">USERNAME</string>
    <string name="contact_us">Contact Us</string>
    <string name="faqs">FAQs</string>
    <string name="setting">Setting</string>
    <string name="favourite_activity">FAVOURITE_ACTIVITY</string>
    <string name="preference_file_key">CREDENTIALS</string>
    <string name="token_sharedpref">token</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="opus">opus</string>
    <string name="no_songs_found">No songs found in playlist!</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="enter_name_and_description_of_playlist">Enter name and description of playlist</string>
    <string name="account">Account</string>
    <string name="id">id</string>
</resources>