<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bhakamusic.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.bhakamusic.ui.library.LibraryFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.bhakamusic.ui.favourite.FavouriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bhakamusic.ui.account.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_account" />
</navigation>