<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:ems="10"
            android:text="@string/enter_name_and_description_of_playlist" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="37dp" />
    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description"
        android:layout_below="@id/editTextName"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="37dp" />

</RelativeLayout>