<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash"
    tools:context=".ui.account.AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/heading_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/account"
            android:layout_gravity="center"
            android:textColor="@color/text_color_yellow"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle_image" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePhoto"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                tools:src="@mipmap/photo" />

        </FrameLayout>
        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@drawable/frame_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:text="@string/contact_us"
                    android:paddingStart="50dp"
                    android:paddingEnd="20dp"
                    android:drawablePadding="20dp"
                    app:drawableStartCompat="@drawable/ic_message_square"
                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />
                <TextView
                    android:id="@+id/faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:text="@string/faqs"
                    android:paddingStart="50dp"
                    android:paddingEnd="20dp"
                    android:drawablePadding="20dp"
                    app:drawableStartCompat="@drawable/ic_help_circle"
                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />
                <TextView
                    android:id="@+id/setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:text="@string/setting"
                    android:paddingStart="50dp"
                    android:paddingEnd="20dp"
                    android:drawablePadding="20dp"
                    app:drawableStartCompat="@drawable/ic_settings"
                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:text="@string/logout"
                    android:paddingStart="50dp"
                    android:paddingEnd="20dp"
                    android:drawablePadding="20dp"
                    app:drawableStartCompat="@drawable/ic_baseline_login_24"
                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</FrameLayout>