<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LandingPage">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:background="@color/splash"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/group_19" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/create_your_experience"
                    android:textAlignment="center"
                    android:textColor="@color/landingText"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="@color/landingText"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:layout_margin="10sp"
                    android:text="@string/stream_your_favourite_song_non_the_go" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/let_s_go" />
            </LinearLayout>
        </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>